--- a/popelscan.lpi
+++ b/popelscan.lpi
@@ -37,7 +37,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="10">
       <Unit0>
         <Filename Value="popelscan.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -89,6 +89,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="BAIOPORT"/>
       </Unit8>
+      <Unit9>
+        <Filename Value="stopwatch.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="stopwatch"/>
+      </Unit9>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
